fix button margin on mobile

--- a/src/assets/scss/pages/home.scss
+++ b/src/assets/scss/pages/home.scss
@@ -105,6 +105,9 @@
       font-weight: 600;
       font-size: 15px;
       margin-top: 28px;
+      @media only screen and (min-device-width : 320px) and (max-device-width : 1024px) {
+        margin-bottom: 20px;
+      }
     }
   }
 }
